[package]
name = "sql-appetizer"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE.md"

[dependencies]
anyhow = { version = "1.0.103", features = ["backtrace"] }
camino = "1.2.4"
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive"] }
sqlite = { git = "https://github.com/ReactorScram/sqlite", rev = "d3c864e97498667f274ed1b2c05f8e9e4f960299" }
