[package]
name = "sql-appetizer"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE.md"

[dependencies]
anyhow = { version = "1.0.103", features = ["backtrace"] }
camino = "1.2.4"
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive"] }
sqlite = { git = "https://github.com/ReactorScram/sqlite", rev = "d4e9a8d90c5e5b2f8389ff49c0eb03548910cee2" }
thiserror = "2.0.18"
